--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": " https://rajatmehta25.github.io/Reacttvapp/",
+  "homepage": " https://rajatmehta25.github.io/Reacttvapp",
   "name": "tvapp",
   "version": "0.1.0",
   "private": true,
