--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": " https://rajatmehta25.github.io/Reacttvapp",
-  "name": "tvapp",
+  "name": "Reacttvapp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
