--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": " https://rajatmehta25.github.io/Reacttvapp",
-  "name": "Reacttvapp",
+  "name": "tvapp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
