--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://rajatmehta25.github.io/Reacttvapp",
+  "homepage": "https://github.com/RajatMehta25/Reacttvapp",
   "name": "tvapp",
   "repository": "https://github.com/RajatMehta25/Reacttvapp",
   "version": "0.1.0",
