--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "homepage": "https://github.com/RajatMehta25/Reacttvapp",
+  
   "name": "tvapp",
-  "repository": "https://github.com/RajatMehta25/Reacttvapp.git",
+  "homepage": "https://RajatMehta25.github.io/Reacttvapp",
+  
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,7 +17,7 @@
   },
   "scripts": {
     "predeploy":"npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
