--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   
   "name": "tvapp",
-  "homepage": "https://RajatMehta25.github.io/Reacttvapp",
+  "homepage": "http://RajatMehta25.github.io/Reacttvapp",
   
   "version": "0.1.0",
   "private": true,
