--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   
   "name": "tvapp",
-  "homepage": "http://rajatmehta25.github.io/Reacttvapp",
+  "homepage": "https://RajatMehta25.github.io/Reacttvapp",
   
   "version": "0.1.0",
   "private": true,
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "predeploy":"npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
