--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   
   "name": "tvapp",
-  "homepage": "https://RajatMehta25.github.io/Reacttvapp",
+  "homepage": "https://RajatMehta25.github.io/Reacttvapp/",
   
   "version": "0.1.0",
-  "private": true,
+  
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "predeploy":"npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
