--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-speech-recognition": "^3.9.0",
+    "react-toastify": "^8.1.0",
     "video.js": "^7.15.4",
     "web-vitals": "^1.1.2"
   },
