--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.29.0",
     "react-speech-recognition": "^3.9.0",
     "react-toastify": "^8.1.0",
+    "react-vr-image-gallery": "^0.4.1",
+    "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.3.10",
+    "swiper": "^8.2.1",
     "video.js": "^7.15.4",
     "web-vitals": "^1.1.2"
   },
