--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "animate.css": "^4.1.1",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.0",
+    "crypto-js": "^4.1.1",
     "material-ui-icons": "^1.0.0-beta.36",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
